--- a/src/App.css
+++ b/src/App.css
@@ -189,6 +189,30 @@ a:hover {
   color: white;
 }
 
+.Footer span {
+  line-height: 1.6;
+}
+
+.Footer li {
+  /* text-align: left; */
+  list-style: none;
+}
+
+.Footer__Logos {
+  margin: 1em 0;
+}
+
+.Footer__Logos img {
+  height: 40px;
+}
+
+.Footer__Logos img:hover {
+  /* opacity: 0.5; */
+  border-radius: 100px;
+  background-color: #6cbacf;
+  transform: scale(1.1);
+  transition: all ease-in-out 0.4s;
+}
 
 
 @-webkit-keyframes App-logo-spin {
